turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: Int does not take parameters
	var z = colors.length()
                             ^